[package]
name = "netcode-rs"
version = "1.4.0"
edition = "2021"
authors = ["Benny Nazimov <benick12@gmail.com>"]
keywords = ["netcode"]
license = "MIT"
repository = "https://github.com/benny-n/netcode"
documentation = "https://docs.rs/netcode-rs"
description = "Rust implementation of the netcode protocol"
include = ["src/*.rs"]

[lib]
name = "netcode"

[dependencies]
byteorder = "1.5.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
env_logger = "0.11.5"
log = "0.4.22"
socket2 = "0.5.7"
thiserror = "1.0.63"
